[gd_scene format=3 uid="uid://rn4u0e8y6h7u"]

[ext_resource type="Script" uid="uid://dxsj1ahj65w4n" path="res://Scripts/player.gd" id="1_v0iea"]
[ext_resource type="PackedScene" uid="uid://drps1jepxmcou" path="res://UI/Building_Menu/building_menu.tscn" id="2_6t5aa"]
[ext_resource type="PackedScene" uid="uid://uixk4lkpwgax" path="res://UI/Inventory/inventory.tscn" id="2_cvnsp"]
[ext_resource type="PackedScene" uid="uid://h4h25vu250xi" path="res://UI/hotbar.tscn" id="2_vgqql"]
[ext_resource type="PackedScene" uid="uid://dxvxtf57vunvf" path="res://UI/Inventory/inventory_armor.tscn" id="4_f1ek2"]
[ext_resource type="PackedScene" uid="uid://dd8bhsrsuh7b" path="res://UI/health_hunger_ui.tscn" id="5_fkybt"]
[ext_resource type="PackedScene" uid="uid://bqqin4wm0hrh1" path="res://UI/Inventory/openable_box_ui.tscn" id="6_3smsa"]
[ext_resource type="Script" uid="uid://blwlw5thknstl" path="res://Scripts/managers/player_animation_manager.gd" id="6_x3wgy"]
[ext_resource type="PackedScene" uid="uid://bwb52amou40li" path="res://UI/Inventory/chest_ui.tscn" id="7_8erm5"]
[ext_resource type="PackedScene" uid="uid://c6b0spwurwib" path="res://Assets/Meshes/Characters/character_modeled.glb" id="9_tx1dd"]
[ext_resource type="PackedScene" uid="uid://blx2vlmsqm440" path="res://Assets/Meshes/Characters/backpack.glb" id="11_gymyn"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_cvnsp"]
height = 2.4804688

[sub_resource type="BoxShape3D" id="BoxShape3D_x3wgy"]
size = Vector3(2.7910194, 2.4700317, 1.7069092)

[node name="player" type="CharacterBody3D" unique_id=1796722324]
collision_layer = 8
floor_stop_on_slope = false
floor_max_angle = 1.134464
script = ExtResource("1_v0iea")

[node name="health_hunger_ui" parent="." unique_id=1853831925 instance=ExtResource("5_fkybt")]

[node name="building_menu" parent="." unique_id=1989589821 instance=ExtResource("2_6t5aa")]
visible = false

[node name="inventory_armor" parent="." unique_id=120270722 instance=ExtResource("4_f1ek2")]
visible = false

[node name="inventory" parent="." unique_id=460583865 instance=ExtResource("2_cvnsp")]
visible = false

[node name="hotbar" parent="." unique_id=368050185 instance=ExtResource("2_vgqql")]

[node name="openable_box_ui" parent="." unique_id=345291410 groups=["box_inventory_ui"] instance=ExtResource("6_3smsa")]

[node name="chest_ui" parent="." unique_id=341995954 groups=["chest_ui"] instance=ExtResource("7_8erm5")]

[node name="vesper" parent="." unique_id=1781663149 instance=ExtResource("9_tx1dd")]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0, 0, 0)
script = ExtResource("6_x3wgy")

[node name="Skeleton3D" parent="vesper/Armature" parent_id_path=PackedInt32Array(1781663149, 712905820) index="0" unique_id=1271711594]
bones/0/position = Vector3(0.3608266, -1.2820468, -119.78883)
bones/0/rotation = Quaternion(-0.7577817, -0.16507864, 0.17022425, 0.6078978)
bones/1/position = Vector3(-3.5762787e-07, 13.961688, -0.5682397)
bones/1/rotation = Quaternion(0.06349513, 0.016638558, -0.010478603, 0.9977884)
bones/2/position = Vector3(5.364418e-07, 16.302103, 1.0728835e-06)
bones/2/rotation = Quaternion(0.16685292, 0.03492058, -0.019015718, 0.9851797)
bones/3/position = Vector3(-8.289141e-07, 18.630983, 5.6921895e-06)
bones/3/rotation = Quaternion(0.16685295, 0.034920655, -0.01901573, 0.9851797)
bones/4/position = Vector3(4.172325e-07, 20.95985, -3.6178014e-06)
bones/4/rotation = Quaternion(-0.15955208, 0.04675082, -0.007220561, 0.9860555)
bones/5/position = Vector3(1.013279e-06, 10.766292, 0.83047765)
bones/5/rotation = Quaternion(-0.109299354, -0.012425769, -0.009941108, 0.9938815)
bones/6/position = Vector3(-5.9604645e-08, 59.18088, 4.564991)
bones/7/position = Vector3(11.126106, 22.053108, -0.09032761)
bones/7/rotation = Quaternion(-0.44319636, -0.023304967, 0.46635845, -0.7652082)
bones/8/position = Vector3(1.4354874e-06, 24.956646, 3.2157157e-05)
bones/8/rotation = Quaternion(0.3607458, -0.22639023, 0.29461452, 0.8554602)
bones/9/position = Vector3(-9.109137e-06, 36.707836, -2.321968e-05)
bones/9/rotation = Quaternion(0.14639036, -0.67765486, 0.19263607, 0.6944387)
bones/10/position = Vector3(1.5473644e-05, 39.275467, -2.7353803e-06)
bones/10/rotation = Quaternion(-0.22504768, 0.67472845, 0.110470906, 0.6941839)
bones/11/position = Vector3(-5.3533134, 5.332061, 3.0755993e-05)
bones/11/rotation = Quaternion(-0.09742615, 0.08377573, 0.18299696, 0.9746805)
bones/12/position = Vector3(-0.93228436, 5.972237, -1.8015724e-05)
bones/12/rotation = Quaternion(0.06653396, -0.04980969, 0.06650015, 0.99431884)
bones/13/position = Vector3(-0.9456444, 6.424726, -5.3659505e-06)
bones/13/rotation = Quaternion(-0.0049561923, 0.003006915, 0.27282256, 0.9620469)
bones/14/position = Vector3(1.8779383, 4.6650863, -1.2874603e-05)
bones/15/position = Vector3(-1.3605031e-05, 13.130339, 0.17443076)
bones/15/rotation = Quaternion(0.2147703, 0.0034551797, -0.010070522, 0.9766066)
bones/16/position = Vector3(0.26606733, 7.49875, -1.7906243e-05)
bones/16/rotation = Quaternion(0.3015986, -0.0006053745, 0.13493584, 0.943838)
bones/17/position = Vector3(-0.23788899, 6.055102, -1.4863297e-05)
bones/17/rotation = Quaternion(-0.0025038924, 0.00071203196, 0.016406933, 0.9998621)
bones/18/position = Vector3(-0.028173685, 4.826256, 4.1335825e-05)
bones/19/position = Vector3(-11.126105, 22.042156, 0.17887309)
bones/19/rotation = Quaternion(0.57407737, -0.028696835, 0.40463063, 0.7112565)
bones/20/position = Vector3(4.191161e-06, 24.956663, 1.2224373e-06)
bones/20/rotation = Quaternion(0.0225174, 0.033985935, -0.45838624, 0.88781756)
bones/21/position = Vector3(-7.817064e-07, 36.712757, 5.6332625e-05)
bones/21/rotation = Quaternion(0.08475007, 0.67213833, -0.12749383, 0.724426)
bones/22/position = Vector3(3.510581e-05, 39.274773, 4.8758757e-06)
bones/22/rotation = Quaternion(-0.2254342, -0.52833545, 0.0119263865, 0.81847346)
bones/23/position = Vector3(4.938323, 5.0746818, 1.7166138e-05)
bones/23/rotation = Quaternion(0.059098758, -0.30726326, -0.18208475, 0.93217045)
bones/24/position = Vector3(0.59088945, 5.633819, 1.3024931e-05)
bones/24/rotation = Quaternion(-0.014998837, 0.004433467, 0.08704518, 0.9960816)
bones/25/position = Vector3(1.24055, 6.5900235, -1.0366067e-05)
bones/25/rotation = Quaternion(0.092917666, 0.019259429, -0.18323717, 0.97847825)
bones/26/position = Vector3(-1.8314438, 5.3647747, -4.005432e-05)
bones/27/position = Vector3(2.2992317e-06, 13.694923, 0.07138971)
bones/27/rotation = Quaternion(0.053775713, -0.007624478, -0.08606995, 0.9948076)
bones/28/position = Vector3(-0.21047261, 7.34987, 6.5523836e-06)
bones/28/rotation = Quaternion(0.16865191, 0.0014537463, -0.062247097, 0.98370713)
bones/29/position = Vector3(0.075256914, 5.5960126, -3.6703244e-05)
bones/29/rotation = Quaternion(0.0005781769, 0.00025631968, 0.007407363, 0.99997234)
bones/30/position = Vector3(0.1352177, 4.7354574, 2.2113321e-05)
bones/31/rotation = Quaternion(0.15877955, 0.20376694, 0.9535286, -0.15508471)
bones/32/position = Vector3(-4.1445933e-06, 50.020428, -1.8074348e-05)
bones/32/rotation = Quaternion(-0.3345649, 0.0137025835, -0.005662412, 0.9422561)
bones/33/position = Vector3(1.6236875e-06, 45.420437, 1.271273e-05)
bones/33/rotation = Quaternion(0.39726657, -0.13963689, 0.021119738, 0.90677166)
bones/34/position = Vector3(9.2119944e-07, 39.365734, -5.9927615e-06)
bones/34/rotation = Quaternion(0.3381983, -0.1666917, 0.06117897, 0.92417157)
bones/35/position = Vector3(-1.7881398e-06, 15.360062, 1.311304e-06)
bones/36/rotation = Quaternion(-0.047484256, 0.05118008, 0.97696, 0.20168054)
bones/37/position = Vector3(1.9621768e-06, 49.876728, 4.084405e-06)
bones/37/rotation = Quaternion(-0.43942964, -0.0046452843, 0.007202166, 0.8982362)
bones/38/position = Vector3(1.310681e-06, 45.36023, 3.9291888e-07)
bones/38/rotation = Quaternion(0.66179824, -0.03850618, 0.08620676, 0.7437129)
bones/39/position = Vector3(-2.9055964e-06, 38.974377, -1.15176135e-08)
bones/39/rotation = Quaternion(0.34163162, 0.1680262, -0.0614476, 0.9226479)
bones/40/position = Vector3(-3.3378642e-06, 15.306558, -9.834582e-07)

[node name="back_attachment" type="BoneAttachment3D" parent="vesper/Armature/Skeleton3D" index="0" unique_id=472877019]
transform = Transform3D(0.9313581, -0.092084885, -0.35226762, 0.36410448, 0.23526116, 0.9011548, -0.000107879285, -0.96755993, 0.25264093, 1.3121716, -6.039116, -149.56422)
bone_name = "mixamorig_Spine1"
bone_idx = 2

[node name="backpack2" parent="vesper/Armature/Skeleton3D/back_attachment" unique_id=1810772606 instance=ExtResource("11_gymyn")]
transform = Transform3D(99.53194, -5.469439, -7.967425, 4.5812416, 99.29493, -10.932993, 8.50922, 10.516819, 99.08071, 9.337517, -185.76828, 0.57833076)

[node name="right_hand_attachment" type="BoneAttachment3D" parent="vesper/Armature/Skeleton3D" index="1" unique_id=1560600696]
transform = Transform3D(0.5842101, -0.30997267, 0.7500768, 0.1135544, 0.9463202, 0.3026271, -0.80361897, -0.09162322, 0.5880487, -31.843666, 93.618996, -173.89037)
bone_name = "mixamorig_RightHand"
bone_idx = 22

[node name="right_hand" type="Node3D" parent="vesper/Armature/Skeleton3D/right_hand_attachment" unique_id=667849128]
transform = Transform3D(-10.05117, 84.06589, -53.215683, 98.15931, 17.109026, 8.487526, 16.239796, -51.38301, -84.2381, 1.9763184, 3.7705154, 2.639328)

[node name="left_hand_attachment" type="BoneAttachment3D" parent="vesper/Armature/Skeleton3D" index="2" unique_id=1009824876]
transform = Transform3D(0.2956851, -0.06363289, -0.95316344, 0.1381844, 0.99013376, -0.02323416, 0.94523793, -0.12484227, 0.30156103, -16.424532, 97.589554, -171.65765)
bone_name = "mixamorig_LeftHand"
bone_idx = 10

[node name="left_hand" type="Node3D" parent="vesper/Armature/Skeleton3D/left_hand_attachment" unique_id=159922670]
transform = Transform3D(-34.657635, 81.42275, -46.574562, 91.9902, 19.790382, -33.854855, -18.348255, -54.5773, -81.75977, 13.450249, 5.6805573, -8.379063)

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=322632765]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2402344, 0)
shape = SubResource("CapsuleShape3D_cvnsp")

[node name="attack_hit_box" type="Area3D" parent="." unique_id=958382089]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.22620654, 1.0386277, 0)
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="attack_hit_box" unique_id=93459318]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.4773469, 0.35073853, -0.050842285)
shape = SubResource("BoxShape3D_x3wgy")

[node name="attack_audio" type="AudioStreamPlayer" parent="." unique_id=1839982891]

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=3242090]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label4" type="Label" parent="CenterContainer" unique_id=1551884954]
z_index = 102
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Survive. Build. Reclaim."
horizontal_alignment = 1
vertical_alignment = 1

[editable path="health_hunger_ui"]
[editable path="hotbar"]
[editable path="vesper"]
